# mlops-with-databricks-2019584

./: .gitignore  README.md  databricks.yml  model_requirements.txt  prepare_dataset.py  project_config.yml  pyproject.toml  requirements.in
fe_model_serving/: deploy_model.py  preprocessing.py  refresh_monitor.py  train_model.py
notebooks/: 02_04.log_model.py  02_05.log_custom_model.py  02_06.register_model.py  03_02.feature_table_feature_func.py  03_03.fe_model.py  04_02.create_feature_spec.py  04_03.deploy_endpoints.py  04_04.call_endpoints.py  05_02.create_extra_features_table.py  06_02a.send_requests.py  06_02b.analyze_inference_table.py  06_03.lakehouse_monitoring.py  feature_table_feature_func.py  log_custom_model.py  log_model.py  mlflow_experiment.py  requirements.in
