[project]
name = "mlops-with-databricks"
version = "0.0.1"
description = "MLOps with Databricks"
readme = "README.md"
requires-python = "==3.11"
dependencies = ["lightgbm==4.5.0",
                "scikit-learn==1.5.1",
                "cloudpickle==3.0.0",
                "mlflow==2.16.0",
                "pandas==2.2.2",
                "databricks-feature-engineering==0.6",
                "databricks-sdk==0.32.0"
                ]

[project.optional-dependencies]
dev = ["databricks-connect>=15.4.1, <16",
       "databricks-sdk>=0.32.0, <0.33",
       "ipykernel>=6.29.5, <7",
       "pip>=24.2"]
